refactor(core): Limit athlete/category to supported enums
